post: deciphering facebook

--- a/src/app/components/blog-post-feature/blog-post-feature.component.html
+++ b/src/app/components/blog-post-feature/blog-post-feature.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/blog', post.slug]">
-  <section [style.--img]="'url(https://www.zooplus.pl/magazyn/wp-content/uploads/2018/01/Shiba-Inu-1.jpg)'">
+  <section [style.--img]="'url(' +  (post.attributes.thumbnail ?? 'https://www.zooplus.pl/magazyn/wp-content/uploads/2018/01/Shiba-Inu-1.jpg') + ')'">
     <div class="feature-image"></div>
     <div class="content">
       <header class="title">{{ post.attributes.title }}</header>
