--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,14 @@ body {
   background-color: var(--bg-color);
   color: var(--font-color);
 }
+
+.analog-markdown {
+  figure {
+    margin: 0;
+    text-align: center;
+  }
+
+  img {
+    max-width: 100%;
+  }
+}
