--- a/src/app/components/blog-post-feature/blog-post-feature.component.scss
+++ b/src/app/components/blog-post-feature/blog-post-feature.component.scss
@@ -12,18 +12,22 @@ section {
     width: 16rem;
     height: 10rem;
     margin-right: 1.5rem;
-    background-color: lightgray;
     border-radius: 1.2rem;
-
-    background-image: var(--img);
-    background-size: cover;
-    background-repeat: no-repeat;
   }
 
   .content {
     padding: 1.5rem .3rem;
     .title {
       font-size: 1.5rem;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    grid-template-columns: 1fr;
+
+    .feature-image {
+      width: 100%;
+      height: auto;
     }
   }
 }
