--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -6,6 +6,10 @@ nav {
   border-bottom: .1rem solid var(--accent-color);
   box-sizing: border-box;
 
+  @media screen and (max-width: 500px) {
+    padding: 1.2rem 2.4rem;
+  }
+
   .blog-name {
     font-size: 1.8rem;
     a {
