feat: use ngx-matomo-client package

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="blog-name">
-    <a [routerLink]="['/']">{{ WEBSITE_DOMAIN }}</a>
+    <a [routerLink]="['/']">{{ websiteDomain }}</a>
   </div>
   <app-mode-switch />
 </nav>
